Vytvoreni zakladnich sluzeb, stale SNAPSHOT
